<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/str_home" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/str_theme" />
        <item
            android:id="@+id/nav_music_hall"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/str_music_hall" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/str_collect" />

        <item android:title="其他">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/str_settings" />
                <item
                    android:id="@+id/nav_drop_out"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/str_drop_out" />
            </menu>
        </item>

    </group>

</menu>
